Derived equation for psi
Derived equation for final twist angle

--- a/Free energy density/LCE.ipynb
+++ b/Free energy density/LCE.ipynb
@@ -221,6 +221,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 143,
+   "id": "7c4d7f02-7552-4015-bb3b-b0109fdf2a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\left[\\begin{matrix}\\left(\\zeta - 1\\right) \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi_{0} \\right)} + 1 & - \\left(\\zeta - 1\\right) \\sin{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi_{0} \\right)} \\cos{\\left(\\phi \\right)} & \\left(\\zeta - 1\\right) \\sin{\\left(\\phi \\right)} \\sin{\\left(\\psi_{0} \\right)} \\cos{\\left(\\psi_{0} \\right)}\\\\- \\left(\\zeta - 1\\right) \\sin{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi_{0} \\right)} \\cos{\\left(\\phi \\right)} & \\left(\\zeta - 1\\right) \\sin^{2}{\\left(\\psi_{0} \\right)} \\cos^{2}{\\left(\\phi \\right)} + 1 & - \\left(\\zeta - 1\\right) \\sin{\\left(\\psi_{0} \\right)} \\cos{\\left(\\phi \\right)} \\cos{\\left(\\psi_{0} \\right)}\\\\\\left(\\zeta - 1\\right) \\sin{\\left(\\phi \\right)} \\sin{\\left(\\psi_{0} \\right)} \\cos{\\left(\\psi_{0} \\right)} & - \\left(\\zeta - 1\\right) \\sin{\\left(\\psi_{0} \\right)} \\cos{\\left(\\phi \\right)} \\cos{\\left(\\psi_{0} \\right)} & \\left(\\zeta - 1\\right) \\cos^{2}{\\left(\\psi_{0} \\right)} + 1\\end{matrix}\\right]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sp.printing.latex(L_0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "80f17009-691b-4968-86cf-d82dd23164b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1} & \\frac{\\zeta \\sin{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)} - \\sin{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)}}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1} & \\frac{- \\zeta \\sin{\\left(\\phi \\right)} \\sin{\\left(\\psi \\right)} \\cos{\\left(\\psi \\right)} + \\sin{\\left(\\phi \\right)} \\sin{\\left(\\psi \\right)} \\cos{\\left(\\psi \\right)}}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1}\\\\\\frac{\\zeta \\sin{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)} - \\sin{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)}}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1} & \\frac{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1} & \\frac{\\zeta \\sin{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)} \\cos{\\left(\\psi \\right)} - \\sin{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)} \\cos{\\left(\\psi \\right)}}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1}\\\\\\frac{- \\zeta \\sin{\\left(\\phi \\right)} \\sin{\\left(\\psi \\right)} \\cos{\\left(\\psi \\right)} + \\sin{\\left(\\phi \\right)} \\sin{\\left(\\psi \\right)} \\cos{\\left(\\psi \\right)}}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1} & \\frac{\\zeta \\sin{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)} \\cos{\\left(\\psi \\right)} - \\sin{\\left(\\psi \\right)} \\cos{\\left(\\phi \\right)} \\cos{\\left(\\psi \\right)}}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1} & \\frac{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + 1}{\\zeta \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} + \\zeta \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} + \\zeta \\cos^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\phi \\right)} \\sin^{2}{\\left(\\psi \\right)} - \\sin^{2}{\\left(\\psi \\right)} \\cos^{2}{\\left(\\phi \\right)} - \\cos^{2}{\\left(\\psi \\right)} + 1}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[(zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1)/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1),                          (zeta*sin(phi)*sin(psi)**2*cos(phi) - sin(phi)*sin(psi)**2*cos(phi))/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1),                                                       (-zeta*sin(phi)*sin(psi)*cos(psi) + sin(phi)*sin(psi)*cos(psi))/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1)],\n",
+       "[                         (zeta*sin(phi)*sin(psi)**2*cos(phi) - sin(phi)*sin(psi)**2*cos(phi))/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1), (zeta*sin(phi)**2*sin(psi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - cos(psi)**2 + 1)/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1),                                                        (zeta*sin(psi)*cos(phi)*cos(psi) - sin(psi)*cos(phi)*cos(psi))/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1)],\n",
+       "[                              (-zeta*sin(phi)*sin(psi)*cos(psi) + sin(phi)*sin(psi)*cos(psi))/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1),                                (zeta*sin(psi)*cos(phi)*cos(psi) - sin(psi)*cos(phi)*cos(psi))/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1), (zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 + 1)/(zeta*sin(phi)**2*sin(psi)**2 + zeta*sin(psi)**2*cos(phi)**2 + zeta*cos(psi)**2 - sin(phi)**2*sin(psi)**2 - sin(psi)**2*cos(phi)**2 - cos(psi)**2 + 1)]])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.Inverse(L) * delta"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 97,
    "id": "6ae49422-8584-40d8-8298-60720dfe2307",
    "metadata": {},
