started plots showing equilibrium swell anisotropy

--- a/Free energy minimization/plot_free_energy.ipynb
+++ b/Free energy minimization/plot_free_energy.ipynb
@@ -750,6 +750,36 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot Equilibrium Deformation Anisotropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_eqm_deformation_anisotropy_vs_v_swell_constant_twist(lambda_r_array, psi_0, v_swell_array, zeta, plot_kwargs = {}):\n",
+    "    local_minima = []\n",
+    "    local_maxima = []\n",
+    "\n",
+    "    for v_swell in v_swell_array:\n",
+    "        for lambda_r in lambda_r_array:\n",
+    "            free_energy_array = eqm_finder.calc_reduced_free_energy_density(psi_0, lambda_r, v_swell, zeta)\n",
+    "\n",
+    "            lambda_z = v_swell / lambda_r**2\n",
+    "\n",
+    "            eqm_finder.find_local_optima(free_energy_array)\n",
+    "\n",
+    "    plt.plot(lambda_r_array / lambda_z, free_energy_array, **plot_kwargs)\n",
+    "    plt.xlabel(\"$\\\\lambda_r / \\\\lambda_z$\")\n",
+    "    plt.ylabel(\"$F$\")"
+   ]
   }
  ],
  "metadata": {
