--- a/Free energy minimization/plot_free_energy.ipynb
+++ b/Free energy minimization/plot_free_energy.ipynb
@@ -1230,7 +1230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1244,12 +1244,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "f049dc0406ba147456462ff3117b2e3a75d4b1cc0e4958da8930332eb7c5a9f6"
    }
   }
  },
